--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "async": "^3.2.5",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.11",
+    "sqlite3": "^5.1.7"
   }
 }
